--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "prepare": "husky",
     "prepublish": "pnpm run build"
   },
-  "dependencies": {
-    "@ksv90/decorators": "^0.1.2"
+  "peerDependencies": {
+    "@ksv90/decorators": "^0.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
@@ -42,7 +42,7 @@
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4",
-    "vite": "^5.4.8",
+    "vite": "^5.4.9",
     "vite-plugin-dts": "^3.9.1",
     "vitest": "^1.6.0"
   },
