--- a/tsconfig.lint.json
+++ b/tsconfig.lint.json
@@ -1,15 +1,5 @@
 {
+  "extends": "./node_modules/@ksv90/tools/packs/typescript/tsconfig.json",
   "include": ["."],
-  "exclude": ["node_modules", "dist"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "lib": ["DOM", "ESNext"],
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "esModuleInterop": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "strict": true,
-    "target": "ESNext"
-  }
+  "exclude": ["node_modules", "dist"]
 }
