Revert "fix: test"
This reverts commit b5ad5d17f3674641d8b9e7c659e5a3a84c66882a.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test:unit": "vitest --run",
     "test:bench": "vitest bench --run",
     "test:type": "vitest --typecheck --run",
-    "prepare": "husky"
+    "prepare": "husky",
+    "prepublish": "pnpm run build"
   },
   "peerDependencies": {
     "@ksv90/decorators": "^0.5.0"
