--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "node": ">=16.0.0"
   },
   "packageManager": "pnpm@9.4.0",
+  "publishConfig": {
+    "provenance": true
+  },
   "homepage": "https://github.com/ksv90/fsm",
   "repository": {
     "type": "git",
