--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "test:unit": "vitest --run",
     "test:bench": "vitest bench --run",
     "test:type": "vitest --typecheck --run",
-    "prepare": "husky",
-    "prepublish": "pnpm run build"
+    "prepare": "husky"
   },
   "peerDependencies": {
     "@ksv90/decorators": "^0.5.0"
@@ -58,6 +57,7 @@
   },
   "packageManager": "pnpm@9.4.0",
   "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
     "provenance": true
   },
   "homepage": "https://github.com/ksv90/fsm",
