--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/install
       - run: pnpm build
-      - run: pnpm publish --access public
+      - run: pnpm publish --no-git-checks --access public
